# playwright

./: README.md  index.html  pyproject.toml  runner_with_options.py
.github/workflows/: main.yml  playwright_e2e_tests.yml
1/export/: influxDbData.txt
2/export/: influxDbData.txt
3/export/: influxDbData.txt
4/export/: influxDbData.txt
features/: environment.py  verify_screenshot.py  verify_with_eyes.py
features/login/: login.feature
features/steps/: homepage.py  login.py  pdf.py
pdf_files/: pyproject.toml
reports/: 5a12c2b3-63d1-44e4-8478-22beb6d839bc-result.json  8f6ddb2d-2ec7-4ac2-9091-933684e3de03-result.json  HMI_behave_report.html  bc8904b2-120d-483d-96df-a672c2e0583e-result.json  d5c75b4f-3f13-421a-ac29-bda74f5f97c4-result.json
util_screenshot/: eyes.py  files.py  imgCompare.py  pdf.py
utils/: env.py  logger.py  wait.py
