[tool.poetry]
name = "visual_testing"
version = "0.1.0"
description = "Visual testing POC to demonstrate multiple apparchaes for Visual testing of UI, images and PDF files."
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "y"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
